Bug 507912 - Open Library - Does not fetch covers for books without ISBN
Summary: Open Library - Does not fetch covers for books without ISBN
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: HEAD
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-05 18:18 UTC by louise.ripley
Modified: 2025-08-23 21:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.1.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description louise.ripley 2025-08-05 18:18:14 UTC
SUMMARY
The cover is not retrieved for books that do not have an ISBN listed.

Documentation, Open Library Covers API: https://openlibrary.org/dev/docs/api/covers
Tellico retrieves covers using this API call: https://covers.openlibrary.org/b/isbn/$value-M.jpg?default=false
Perhaps it would be better to use OLID (Open Library ID) rather than ISBN to retrieve a book cover: https://covers.openlibrary.org/b/olid/$value-M.jpg?default=false

STEPS TO REPRODUCE
1. Create a new book collection
2. Add entry from Internet Search
3. Search "Sonnets. Volume 8" or "nous. n°1"
   Search type: Title
   Search source: Open Library
4. The returned book has no cover.
  Yet the cover is present on OpenLibrary :
    https://openlibrary.org/books/OL32223354M/Sonnets._Volume_8
    https://openlibrary.org/books/OL59631618M/nous._n%C2%B01

SOFTWARE/OS VERSIONS
OS: Linux Mint 22.1 (Xia) - Cinnamon
Tellico: 4.1.3
KDE Frameworks: 6.13.0
Qt: Using 6.9.0 and built against 6.9.0
KDE Flatpak runtime (Xcb)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.14.0-27-generic
Comment 2 Robby Stephenson 2025-08-23 21:37:16 UTC
Git commit 7200a1794a728fe8b0c181ec1aa6448b7efae863 by Robby Stephenson.
Committed on 22/08/2025 at 01:36.
Pushed by rstephenson into branch 'master'.

Use OpenLibrary ID for cover images, instead of ISBNs only
FIXED-IN: 4.1.4

M  +4    -0    ChangeLog
M  +26   -12   src/fetch/openlibraryfetcher.cpp
M  +22   -0    src/tests/openlibraryfetchertest.cpp
M  +1    -0    src/tests/openlibraryfetchertest.h

https://invent.kde.org/office/tellico/-/commit/7200a1794a728fe8b0c181ec1aa6448b7efae863
Comment 3 Robby Stephenson 2025-08-23 21:38:52 UTC
Git commit 5784d46651e44564fc83f7229ba657d0c0560dec by Robby Stephenson.
Committed on 22/08/2025 at 01:39.
Pushed by rstephenson into branch '4.1'.

Use OpenLibrary ID for cover images, instead of ISBNs only
FIXED-IN: 4.1.4

M  +4    -0    ChangeLog
M  +26   -12   src/fetch/openlibraryfetcher.cpp
M  +22   -0    src/tests/openlibraryfetchertest.cpp
M  +1    -0    src/tests/openlibraryfetchertest.h

https://invent.kde.org/office/tellico/-/commit/5784d46651e44564fc83f7229ba657d0c0560dec