Use OpenLibrary ID for cover images, instead of ISBNs only

BUG: 507912
FIXED-IN: 4.1.4